sektor/ops/k8s/overlays/prod/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sektor-prod
  labels:
    nafura.io/app: sektor-btp
    nafura.io/env: prod
