sektor/ops/k8s/overlays/prod/patch-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sektor-btp-web
spec:
  template:
    spec:
      containers:
        - name: sektor-btp-web
          imagePullPolicy: Always
