sektor/ops/k8s/overlays/prod/patch-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sektor-btp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - sektor.nafuralabs.com
        - api.sektor.nafuralabs.com
      secretName: sektor-tls
  rules:
    - host: api.sektor.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sektor-btp-backend
                port:
                  number: 8082
    - host: sektor.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sektor-btp-web
                port:
                  number: 80
